contrast issue

--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -379,7 +379,7 @@ form label.sbs {
 
 form input.submitBtn {
   border: none;
-  background-color: #660000ff;
+  background-color: red;
   color: white;
   border-radius: 1em;
   padding: 0.75em 1.5em;
